Cherry-pick r258515. rdar://problem/60551856

[Cocoa] Crash under -[WKPreferenceObserver init]
    https://bugs.webkit.org/show_bug.cgi?id=209145

    Reviewed by Darin Adler.

    Handle the case when calling [NSUserDefaults initWithSuiteName:] did not succeed.

    No new tests, since I have not been able to reproduce.

    * UIProcess/Cocoa/PreferenceObserver.mm:
    (-[WKPreferenceObserver init]):

    Canonical link: https://commits.webkit.org/222057@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258515 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/221734.33@safari-610.1.7-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-610.1.7-branch@258607 268f45cc-cd09-0410-ab3c-d52691b4dbfc