Source/WebKit/UIProcess/Cocoa/PreferenceObserver.mm
@@ -203,6 +203,10 @@ static void registerDefaultsOverride(id self, SEL selector, NSDictionary<NSStrin
 
     for (auto domain : domains) {
         auto userDefaults = adoptNS([[WKUserDefaults alloc] initWithSuiteName:domain]);
+        if (!userDefaults) {
+            WTFLogAlways("Could not init user defaults instance for domain %s", String(domain).utf8().data());
+            continue;
+        }
         userDefaults.get()->m_observer = self;
         // Start observing a dummy key in order to make the preference daemon become aware of our NSUserDefaults instance.
         // This is to make sure we receive KVO notifications. We cannot use normal KVO techniques here, since we are looking
